==> Katinor/SuperGreatCan/kernel/driver/lib_at86rf/src/PAL/SAM3S/AT91SAM3S/Boards/REB_4_0_2_REX_ARM_SAM3S_REV_1/pal_board.c <==
#include "../../../../../../ubiconfig.h"
#include <stdbool.h>
#include <stdlib.h>
#include "../../../../Inc/pal.h"
#include "../pal_boardtypes.h"
#include "../../../../../Include/_pal_config.h"
#include "../../../Generic/Inc/pal_timer.h"

void trx_interface_init(void)
{
	 unsigned int abcdsr;
    /*
     * The PIO control is disabled for the SPI pins MISO, MOSI, SCK and the
     * transceiver interrupt pin and the SPI module control for these pins
     * is enabled.
     *
     * Please note that these SPI pins from SPI1 require setting of
     * Peripheral B.
     */
	 PMC->PMC_PCER0 = _BV(ID_PIOA | ID_PIOB | ID_PIOC);
#if 	   (1 == EXCLUDE_MODIFICATION_FOR_UBINOS)
    PIOA->PIO_BSR = (MISO | MOSI | SCK);
#else 	/* (1 == EXCLUDE_MODIFICATION_FOR_UBINOS) */

    PIOA->PIO_IDR = (MISO | MOSI | SCK);

    // configure the PIO Peripheral A
    abcdsr = PIOA->PIO_ABCDSR[0];
    PIOA->PIO_ABCDSR[0] &= ((~(MISO | MOSI | SCK))& abcdsr);
    abcdsr = PIOA->PIO_ABCDSR[1];
    PIOA->PIO_ABCDSR[1] &= ((~(MISO | MOSI | SCK))& abcdsr);

    //    PIOA->PIO_ASR = (MISO | MOSI | SCK); // original code

#endif	/* (1 == EXCLUDE_MODIFICATION_FOR_UBINOS) */
    PIOA->PIO_PDR = (MISO | MOSI | SCK);

    PMC->PMC_PCER0 = _BV(ID_PIOA);
//    PIOA->PIO_ASR = TRX_INTERRUPT_PIN;  // original code

    abcdsr = PIOA->PIO_ABCDSR[0];
    PIOA->PIO_ABCDSR[0] &= ((~(TRX_INTERRUPT_PIN))& abcdsr);
    abcdsr = PIOA->PIO_ABCDSR[1];
    PIOA->PIO_ABCDSR[1] &= ((~(TRX_INTERRUPT_PIN))& abcdsr);
    PIOA->PIO_PDR = TRX_INTERRUPT_PIN; //  original code

    PIOA->PIO_IDR = TRX_INTERRUPT_PIN;
    PIOA->PIO_PUDR = TRX_INTERRUPT_PIN;
    PIOA->PIO_IFDR = TRX_INTERRUPT_PIN;
    PIOA->PIO_ODR = TRX_INTERRUPT_PIN;	//Output disable, PIO Interrupt를 쓰므로 Input으로 설정
    PIOA->PIO_PER = TRX_INTERRUPT_PIN;

    /*
     * Select line will be used as a GPIO. The controller recognizes 1 cycle
     * of SPI transaction as 8 bit, hence deactivates the chip select after 1
     * cycle. But the transceiver needs the chip select to be active for two
     * cycles (In one cycle the transceiver gets to know about the address of
     * register or memory location and the kind of operation to be performed
     * on that memory location. And in the second cycle its performs the
     * specified operation). To achieve this, the chip select line will be
     * manually pulled low and high (after the transaction). Hence the SEL line
     * is configured as PIO and the SPI control of SEL is disabled.
     */
    /* Set SEL as output pin. */
//    PIOB->PIO_OER = SEL;
//    PIOB->PIO_PER = SEL;

    /*
     * Used peripheral interface is SPI1.
     * The clock to the utilized SPI 1 peripheral is enabled.
     */
#if 	   (1 == EXCLUDE_MODIFICATION_FOR_UBINOS)
    PMC->PMC_PCER0 = _BV(AT91C_ID_SPI1);
#else 	/* (1 == EXCLUDE_MODIFICATION_FOR_UBINOS) */
    PMC->PMC_PCER0 = _BV(ID_SPI);
#endif	/* (1 == EXCLUDE_MODIFICATION_FOR_UBINOS) */

    /* The controller is configured to be master. */
    SPI->SPI_CR = SPI_CR_SPIDIS;
    /* Execute a software reset of the SPI twice */
    SPI->SPI_CR = SPI_CR_SWRST;
    SPI->SPI_CR = SPI_CR_SWRST;

    SPI->SPI_MR = (SPI_MR_MSTR | SPI_MR_MODFDIS | (SPI_MR_PCS_Msk & SS_ENABLE));
//    SPI->SPI_PTCR = (AT91C_PDC_RXTDIS | AT91C_PDC_TXTDIS);
//    SPI->SPI_CR = SPI_SPIEN;
//    PMC->PMC_PCDR0 = _BV(ID_SPI);
    /*
     * SPI mode 0 (clock polarity = 0 and clock phase = 1) is selected. The
     * transaction width is set to 8 bits. The SCBR register of the SPI module
     * is written with the divider required for generation of the baud rate. It
     * is calculated as follows. Baud rate = MCK / SPI_BR_DIVIDER.
     */
    SPI->SPI_CSR[2] = (SPI_CSR_NCPHA |
                            (SPI_CSR_BITS_Msk & SPI_CSR_BITS_8_BIT) |
                            (SPI_CSR_SCBR_Msk & (SPI_BR_DIVIDER << SCBR_FIELD_POS_IN_CSR_REG)));

    /* The SPI is enabled. */
    SPI->SPI_CR = SPI_CR_SPIEN;
}

void pal_trx_read_timestamp(uint32_t *timestamp)
{
    /*
     * Everytime a transceiver interrupt is triggred, input capture register of
     * the timer channel 0 is latched with the timer counter value. The
     * 'sys_time' is concatenated to the value of capture register to generate
     * the time stamp of the received frame.
     *      'sys_time'    'Capture register'
     *  |-----------------|-----------------| => 32 bit timestamp
     *        16 bits           16 bits
     */
    *timestamp = (uint32_t)sys_time << (uint32_t)16;
    *timestamp |= TIME_STAMP_REGISTER;

    /* The timeout is pre scaled accroding to the clock period. */
#if 	   (1 == EXCLUDE_MODIFICATION_FOR_UBINOS)
    *timestamp = (uint32_t)(*timestamp / CLOCK_PERIOD);
#else 	/* (1 == EXCLUDE_MODIFICATION_FOR_UBINOS) */
    *timestamp = (uint32_t) TIMERTICK_TO_USEC(*timestamp);
#endif	/* (1 == EXCLUDE_MODIFICATION_FOR_UBINOS) */
}

void gpio_init(void)
{
    /*
     * The clock to PIO A and PIO B are enabled. This is necessary, as only
     * when the clock is provided the PIO starts functioning.
     */
	PMC->PMC_PCER0 = _BV(ID_PIOA | ID_PIOB);

    /* The following pins are output pins.  */
    PIOA->PIO_OER = RST;
    PIOA->PIO_PER = RST;
    PIOA->PIO_OER = SLP_TR;
    PIOA->PIO_PER = SLP_TR;
    PIOA->PIO_OER = SEL;
    PIOA->PIO_PER = SEL;

}

void timer_init_non_generic(void)
{
	unsigned int abcdsr;
    initialize_timer_channel(TC_CLKS_MCK32, ID_TC0);

    /* The clock for timer channel 0 is enabled here. */
    PMC->PMC_PCER0 = _BV(ID_TC0);

    /* The clock is enabled at the timer level. */
    TC0->TC_CHANNEL->TC_CCR = TC_CCR_CLKEN;

#ifdef ENABLE_HIGH_PRIO_TMR
    initialize_timer_channel(TC_CLKS_MCK32, AT91C_ID_TC0);
#endif  /* ENABLE_HIGH_PRIO_TMR */

    /*
     * The clock for timer channel 1 will be enabled only when a high
     * priority timer is requested to be started, as until that time, the timer
     * channel 1 is not used at all. Also the overall power consumption
     * can be reduced by clocking a perpheral only when required.
     */

    /* The AIC is set up for the timer interrupts. */
//    NVIC_CONFIGURE(ID_TC0,
//                  AT91C_AIC_SRCTYPE_POSITIVE_EDGE,
//                  timer_ch0_irq_handler);

   	do {
    	    /* The interrupts for specified peripheral are first disabled. */
    		intr_disable(ID_TC0);
    	    /*
    	     * The edge at which the interrupt is to be triggered and handler for
    	     * the same is configured.
    	     */
    		PIOA->PIO_AIMER  = PIO_IT_AIME;
    		PIOA->PIO_REHLSR = PIO_IT_RE_OR_HL;
    		PIOA->PIO_ESR    = PIO_IT_EDGE;

    		intr_connectisr(ID_TC0, (void *)timer_ch0_irq_handler, 0x40, 0);
    	    /* Pending interrupts if any for the peripheral are cleared. */

    		intr_ClearPending(ID_TC0);

    	} while (0);


#ifdef ENABLE_HIGH_PRIO_TMR
    NVIC_CONFIGURE(AT91C_ID_TC0,
                  AT91C_AIC_SRCTYPE_POSITIVE_EDGE,
                  timer_ch1_irq_handler);
#endif  /* ENABLE_HIGH_PRIO_TMR */

    /*
     * The timer overflow interrupts for the timer channel 0 is enabled, as
     * channel 0 is used for regular timer implementation.
     */
    TC0->TC_CHANNEL->TC_IER = TC_IER_COVFS;

    /* The timer channel 0 interrupt in AIC is enabled. */
    intr_enable(ID_TC0);

    /*
     * The PB23 pin of PIOB is configured as TIOA line of the timer channel 0.
     * This line is connected to the transceiver interrupt. Whenever an
     * interrupt occurs, the TC_RA register will latch the TC_CV value, which
     * is useful in timestamp generation.
     *
     * The pin requires setting of Peripheral A.
     */

//    PIOB->PIO_ASR = TIMER_INPUT_CAPTURE_LINE; 	//original code

    abcdsr = PIOB->PIO_ABCDSR[0];
    PIOB->PIO_ABCDSR[0] &= ((~(TIMER_INPUT_CAPTURE_LINE))& abcdsr);
    abcdsr = PIOB->PIO_ABCDSR[1];
    PIOB->PIO_ABCDSR[1] &= ((~(TIMER_INPUT_CAPTURE_LINE))& abcdsr);

    PIOB->PIO_PDR = TIMER_INPUT_CAPTURE_LINE;

    /*
     * Settings are done to load the RA and RB with counter value at rising and
     * falling edge of the TIOA line (transceiver interrupt) respectively. This
     * is useful in frame timestamp generation.
     *
     * Although RB is not used, RB is also configured, as RA can be loaded only
     * if it is not loaded or RB is loaded. This configuration will load RA on
     * the rising edge and RB on the falling edge of the transceiver interrupt
     * respectively, making RA ready for the loading the counter value on next
     * interrupt.
     */
    TC0->TC_CHANNEL->TC_CMR |= ((TC_CMR_LDRA_Msk & TC_CMR_LDRA_RISING) |
                               (TC_CMR_LDRB_Msk & TC_CMR_LDRB_FALLING));

    /* Only the timer channel 0 is triggered. */
    TC0->TC_CHANNEL->TC_CCR = TC_CCR_SWTRG;
}

void pal_led_init(void)
{
    /* Set LED pins to output. */
    PIOA->PIO_OER = LED_PINS;
    PIOA->PIO_SODR = LED_PINS;
}

void pal_led(led_id_t led_no, led_action_t led_setting)
{
    uint32_t led_pin;

    switch (led_no)
    {
        case LED_0: led_pin = PIO_PA19; break;
        case LED_1: led_pin = PIO_PA20; break;
        default: return;
    }

    /* LEDs are low active. */
    if (led_setting == LED_ON)
    {
    	PIOA->PIO_CODR = led_pin;
    }
    else if (led_setting == LED_OFF)
    {
    	PIOA->PIO_SODR = led_pin;
    }
    else    /* LED_TOGGLE */
    {
        if (PIOA->PIO_ODSR & led_pin)
        {
        	PIOA->PIO_CODR = led_pin;
        }
        else
        {
        	PIOA->PIO_SODR = led_pin;
        }
    }
}

void pal_button_init(void)
{
    PMC->PMC_PCER0 = 1 << ID_PIOA;

	PIOA->PIO_IDR =
	PIOA->PIO_PUER =
	PIOA->PIO_IFER =
	PIOA->PIO_ODR =
	PIOA->PIO_PER = LED_PINS;
}

button_state_t pal_button_read(button_id_t button_no)
{
    /* Keep compiler happy. */
    button_no = button_no;

    if (~LED_PORT->PIO_PDSR & LED_PINS)
    {
        return BUTTON_PRESSED;
    }
    else
    {
        return BUTTON_OFF;
    }
}
